# cloudflarepycli

./: .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci-lint-test.yml
cfspeedtest/: __init__.py  __main__.py  cloudflare.py  logger.py  version.py
src/cloudflarepycli/: __main__.py  cloudflareclass.py
