[project]
name = "cloudflarepycli"
version = "2.0.1"
description = "Python CLI and utiltiies for retrieving network performance statistics."
authors = [{ name = "Tom Evslin", email = "tevslin@gmail.com"}, { name = "Martin Brose", email = "nitramesorb@gmail.com"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["speedtest", "cloudflare", "latency", "jitter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = ["requests>=2.32.3"]

[project.urls]
Homepage = "https://github.com/martinbrose/cloudflarepycli"
Issues = "https://github.com/martinbrose/cloudflarepycli/issues"

[project.scripts]
cfspeedtest = "cfspeedtest.__main__:cfspeedtest"

[build-system]
requires = [
  "setuptools>=61.0",
  "twine>=5.1.0",
]
build-backend = "setuptools.build_meta"
