[metadata]
name = cloudflarepycli
version = 1.8
author = "Tom Evslin"
author_email = tevslin@gmail.com
description = "Python CLI and python class for retrieving user's realtime performance statistics"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tevslin/cloudflarepycli
project_urls =
    Bug Tracker = https://github.com/tevslin/cloudflarepycli/issues
license_files = file:License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	
keywords=
	speedtest
	cloudflare
	latency
	jitter	

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires=
	requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cfspeedtest = cloudflarepycli.__main__:main